[package]
name = "dlsm-shm"
description = "共享内存 Arena 分配器（mmap MAP_SHARED + 原子 bump）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
dlsm-core.workspace = true
libc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
dlsm-testutils.workspace = true
libc.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true

[target.'cfg(loom)'.dev-dependencies]
loom.workspace = true
